--- a/ExampleDBEntities/Auction.Web/Views/Home/Index.cshtml
+++ b/ExampleDBEntities/Auction.Web/Views/Home/Index.cshtml
@@ -4,9 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>@WebConfigHelper.ApplicationName</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>@(User.Identity.IsAuthenticated ? "Hi, " + User.Identity.Name : WebConfigHelper.ApplicationName) </h1>
 </div>
 
 <div class="row">
