fix AuthorizeProviderAttribute to accept roles

--- a/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
+++ b/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Activities.Statements
-@using Auction.Model.Enums
-@using Auction.Web.Helpers
+﻿@using Auction.Web.Helpers
 @using Auction.Web.Services
 <!DOCTYPE html>
 <html>
