AuctionRepository + ApprovedBy to nullable fk + bootswatch style

--- a/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Realtor/Index.cshtml
+++ b/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Realtor/Index.cshtml
@@ -1,7 +1,20 @@
-﻿
+﻿@model List<Auction.Model.Auction>
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Realtor Main</h2>
 
+
+<div class="row">
+    <h2>Auctions</h2>
+    @foreach (var a in Model)
+    {
+        <div class="col-md-4 bordered">
+            <h2 class="hdr">@a.Name</h2>
+            <img src="@a.Product.ImageUrl" class="img" />
+            <p>
+                <a class="btn btn-default btnm" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>
+            </p>
+        </div>
+    }
+</div>
