--- a/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
+++ b/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav right">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index",
+                                         new { area = "", controller = "Home" })</li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         if (RoleService.IsAuctionRealtor(User.Identity.Name))
@@ -32,11 +33,13 @@
                                          new {area = "AuctionRealtor", controller = "Realtor"})
                             </li>
                         }
-                        <li>@Html.ActionLink("Sign Out", "Logout", "Home")</li>
+                        <li>@Html.ActionLink("Sign Out", "Logout",
+                                         new { area = "", controller = "Home" })</li>
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Sign In", "Login", "Home")</li>
+                        <li>@Html.ActionLink("Sign In", "Login",
+                                         new { area = "", controller = "Home" })</li>
                     }
 
                 </ul>
