--- a/ExampleDBEntities/Auction.Web/Views/Home/Login.cshtml
+++ b/ExampleDBEntities/Auction.Web/Views/Home/Login.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Loginw</h2>
+<h2>Login</h2>
 
 @using (Html.BeginForm("Login"))
 {
@@ -22,7 +22,7 @@
                 <label class="control-label">@Html.ValidationMessageFor(u => u.Email)</label>
             </div>
         </div>
-    </div><br>
+    </div>
     <div class="form-group">
         @Html.LabelFor(u => u.Password, new { @class = "col-lg-2 control-label" })<br>
         <div class="col-lg-10">
