--- a/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
+++ b/ExampleDBEntities/Auction.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content mt-50">
         @RenderBody()
         <hr />
         <footer>
