--- a/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Realtor/Details.cshtml
+++ b/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Realtor/Details.cshtml
@@ -6,10 +6,9 @@
 
 <h2>@Model.Name</h2>
 
-<div class="container">
-    <div class="row">
-        <img src="@Model.Product.ImageUrl"/>
-    </div>
+
+<div class="row m-l-0">
+    <img src="@Model.Product.ImageUrl" />
 </div>
 
 <table class="table table-striped table-hover ">
