--- a/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Shared/_Layout.cshtml
+++ b/ExampleDBEntities/Auction.Web/Areas/AuctionRealtor/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-<div class="row mt-50">
+<div class="row">
     <div class="col-lg-3 col-md-3 col-sm-4">
         <div class="row">
             <h2>@User.Identity.Name</h2> <span></span>
